Fixed spacing
fixed projects spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -321,7 +321,7 @@ main {
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 80vw;
 }
 
